fix(note): 01.java-and-jvm - 补充 P1 维度（一句话定位 + 源码深度 + 版本演进 + 反例对比）
- collection/ArrayList/README.md: 加一句话定位 + grow() 源码 WHY 注释
- 03-concurrency/volatile/README.md: 加一句话定位 + JDK 1.0→11+ 版本演进表
- 02-jvm/README.md: 标准化定位格式 + 5 组 ❌/✅ 反例对比（堆设置/递归/GC/直接内存/类加载器）
- version/java-17/README.md: 加一句话定位 + 14 JEP 速查表 + JVM 参数变化表
- 01-language/generics/README.md: 加一句话定位 + 版本演进表(JDK 5→未来) + 5 组 ❌/✅ 反例对比（Raw Type/PECS/钻石运算符/泛型数组/instanceof），扩充到 405 行